# k3b

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  AUTHORS  AdditionalInfo.txt  CMakeLists.txt  COPYING  ChangeLog  ConfigureChecks.cmake  ConvenienceLibs.cmake  Doxyfile.cmake  FAQ  FAQ.txt  INSTALL  INSTALL.txt  KNOWNBUGS  Makefile.am  Makefile.am.in  PERMISSIONS  PERMISSIONS.txt  README  README.compile_cvs  README.txt  RELEASE_HOWTO  Release How To.txt  TODO  config-k3b.h.cmake  configure.in.bot  configure.in.in  k3b.kdev4  k3b.kdevprj  k3b.lsm  k3b.lsm.cmake  k3b.spec  snapcraft.yaml
dvd+rw-tools/: Makefile.am  README.k3b  btcflash.cpp  dvd+rw-booktype.cpp  dvd+rw-format.cpp  dvd+rw-mediainfo.cpp  dvd+rw-tools.spec  dvd-ram-control.cpp  growisofs.1  growisofs.c  growisofs_mmc.cpp  index.html  rpl8.cpp  transport.hxx
k3b/k3bsetup/: Makefile.am  base_k3bsetup2.ui  k3bsetup  k3bsetup2.cpp  k3bsetup2.desktop  k3bsetup2.h
k3b/libk3b/: Makefile.am  README  dummy.cpp  k3bimage.xsd
k3bsetup/: CMakeLists.txt  Makefile.am  Messages.sh  base_k3bsetup.ui  base_k3bsetup2.ui  k3bsetup  k3bsetup.actions  k3bsetup.cpp  k3bsetup.desktop  k3bsetup.h  k3bsetup2.cpp  k3bsetup2.desktop  k3bsetup2.h  k3bsetupdevices.cpp  k3bsetupdevices.h  k3bsetupdevicesmodel.cpp  k3bsetupdevicesmodel.h  k3bsetupprogramitem.cpp  k3bsetupprogramitem.h  k3bsetupprograms.cpp  k3bsetupprograms.h  k3bsetupprogramsmodel.cpp  k3bsetupprogramsmodel.h  k3bsetupwizardtabs.cpp  k3bsetupworker.cpp  k3bsetupworker.h
k3bsetup/worker/: CMakeLists.txt  k3bsetupworker.cpp  k3bsetupworker.h  main.cpp  org.k3b.setup.conf  org.k3b.setup.policy  org.k3b.setup.service.in  org.k3b.setup.xml
kfile-plugins/k3bproject/: CMakeLists.txt  Messages.sh  kfile_k3b.desktop  kfile_k3bprojectfileplugin.cpp  kfile_k3bprojectfileplugin.h
kioslaves/videodvd/: CMakeLists.txt  Makefile.am  videodvd.cpp  videodvd.desktop  videodvd.h  videodvd.json  videodvd.protocol  videodvd_i18n.h
kioworkers/videodvd/: CMakeLists.txt  Messages.sh  videodvd.cpp  videodvd.desktop  videodvd.h  videodvd.json  videodvd_i18n.h
libk3b/: CMakeLists.txt  Makefile.am  Messages.sh  README  config-libk3b.h.cmake  configure.in.in  k3b_i18n.h  k3bimage.xsd
libk3b/cddb/: CMakeLists.txt  Makefile.am  k3bcddb.cpp  k3bcddb.h  k3bcddbhttpquery.cpp  k3bcddbhttpquery.h  k3bcddblocalquery.cpp  k3bcddblocalquery.h  k3bcddblocalsubmit.cpp  k3bcddblocalsubmit.h  k3bcddbmultientriesdialog.cpp  k3bcddbmultientriesdialog.h  k3bcddbpquery.cpp  k3bcddbpquery.h  k3bcddbquery.cpp  k3bcddbquery.h  k3bcddbresult.cpp  k3bcddbresult.h  k3bcddbsubmit.cpp  k3bcddbsubmit.h
libk3b/core/: CMakeLists.txt  Makefile.am  k3b_export.h  k3bartsaudioserver.h  k3baudioserver.h  k3bcore.cpp  k3bcore.h  k3bdataevent.h  k3bdefaultexternalprograms.cpp  k3bdefaultexternalprograms.h  k3bexternalbinmanager.cpp  k3bexternalbinmanager.h  k3bglobals.cpp  k3bglobals.h  k3bglobalsettings.cpp  k3bglobalsettings.h  k3bjob.cpp  k3bjob.h  k3bjobhandler.h  k3bkjobbridge.cpp  k3bkjobbridge.h  k3bprocess.cpp  k3bprocess.h  k3bprogressinfoevent.h  k3bsimplejob.h  k3bsimplejobhandler.cpp  k3bsimplejobhandler.h  k3bthread.cpp  k3bthread.h  k3bthreadjob.cpp  k3bthreadjob.h  k3bthreadjobcommunicationevent.cpp  k3bthreadjobcommunicationevent.h  k3bversion.cpp  k3bversion.h  k3process.cpp  k3process.h  k3processcontroller.cpp  k3processcontroller.h
libk3b/images/: Makefile.am  k3baudiocueimagesource.cpp  k3baudiocueimagesource.h  k3bcdimageburner.cpp  k3bcdimageburner.h  k3bcdrecordcloneimagereader.cpp  k3bcdrecordcloneimagereader.h  k3bcuefilereader.cpp  k3bcuefilereader.h  k3bimage.cpp  k3bimage.h  k3bimageburner.cpp  k3bimageburner.h  k3bimagecache.cpp  k3bimagecache.h  k3bimagecreator.cpp  k3bimagecreator.h  k3bimagereaderbase.cpp  k3bimagereaderbase.h  k3bimagesink.cpp  k3bimagesink.h  k3bimagesource.cpp  k3bimagesource.h  k3bimagesourcestreamer.cpp  k3bimagesourcestreamer.h  k3bnrgisoimagereader.cpp  k3bnrgisoimagereader.h  k3bplainimagesource.cpp  k3bplainimagesource.h  k3bsimpleimagesource.cpp  k3bsimpleimagesource.h  k3bsimpletar.cpp  (+5 more)
libk3bdevice/: CMakeLists.txt  Makefile.am  Messages.sh  configure.in.bot  configure.in.in  k3bcdtext.cpp  k3bcdtext.h  k3bcrc.cpp  k3bcrc.h  k3bdebug.cpp  k3bdebug.h  k3bdevice.cpp  k3bdevice.h  k3bdevice_export.h  k3bdevice_i18n.h  k3bdevice_mmc.cpp  k3bdeviceglobals.cpp  k3bdeviceglobals.h  k3bdevicemanager.cpp  k3bdevicemanager.h  k3bdevicetypes.h  k3bdiskinfo.cpp  k3bdiskinfo.h  k3bdiskinfo_p.h  k3bhalconnection.cpp  k3bhalconnection.h  k3bmmc.h  k3bmsf.cpp  k3bmsf.h  k3bscsicommand.cpp  k3bscsicommand.h  k3bscsicommand_bsd.cpp  k3bscsicommand_linux.cpp  k3bscsicommand_netbsd.cpp  k3bscsicommand_win.cpp  k3btoc.cpp  k3btoc.h  k3btrack.cpp  k3btrack.h  libk3bdevice.doxy  (+1 more)
plugins/: CMakeLists.txt  Makefile.am  k3bplugin_i18n.h
po/: CMakeLists.txt  de.po  fr.po  it.po  k3b.pot  k3bsetup.pot
src/: CMakeLists.txt  IDEAS  Makefile.am  Messages.sh  XmlMessages.sh  audiotracktestdialog.cpp  audiotracktestdialog.h  cddb.cpp  cddb.h  eventsrc  k3b-cue.desktop  k3b-iso.desktop  k3b.appdata.xml  k3b.cpp  k3b.desktop  k3b.h  k3b.notifyrc  k3b.qrc  k3b_export.h  k3babstractreader.cpp  k3babstractreader.h  k3babstractwriter.cpp  k3babstractwriter.h  k3baction.cpp  k3baction.h  k3bappdevicemanager.cpp  k3bappdevicemanager.h  k3bapplication.cpp  k3bapplication.h  k3baudioplayer.cpp  k3baudioplayer.h  k3baudioplayerwidget.cpp  k3baudioplayerwidget.h  k3baudioproject.cpp  k3baudioproject.h  k3baudioprojectinterface.cpp  k3baudioprojectinterface.h  k3bblankingdialog.cpp  k3bblankingdialog.h  k3bblankingjob.cpp  (+237 more)
tests/: CMakeLists.txt  hal-test.h  hal-test.pro  k3bdataprojectmodeltest.cpp  k3bdataprojectmodeltest.h  k3bdeviceglobalstest.cpp  k3bdeviceglobalstest.h  k3bexternalbinmanagertest.cpp  k3bexternalbinmanagertest.h  k3bfuzzertest.cpp  k3bglobalstest.cpp  k3bglobalstest.h  k3bmetaitemmodeltest.cpp  k3bmetaitemmodeltest.h  k3bmodelutilstest.cpp  k3bmodelutilstest.h  k3btestutils.cpp  k3btestutils.h  stub-k3bapplication.cpp  test-blank-cdr.sh  test-blank-dvd+r.sh
(+3141 files in other folders)
