####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = src k3bsetup

EXTRA_DIST = k3b.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO k3b.lsm 

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if 
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 

